--- a/scss/unique/email1-components.scss
+++ b/scss/unique/email1-components.scss
@@ -121,7 +121,7 @@ header {
 .scenery-2 {
     border-radius: 5px;
     margin-right: 1rem;
-    min-width: 250px;
-    max-height: 385px;
-    
+    max-height: 50%;
+    max-width: 50%;
+    margin-bottom: 1rem;
 }
